Initial release of working cargo hold value plugin

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Cargo Value
+author=tdrummond91
+description=Plugin to Show the total value (GE/HA) in your sailing cargo hold
+tags=sailing,cargo,hold,value,prices,grand,exchange,high,alchemy
+plugins=com.cargovalue.CargoValuePlugin
